--- a/TuSDKDemo/AndroidManifest.xml
+++ b/TuSDKDemo/AndroidManifest.xml
@@ -40,7 +40,7 @@
 
 
         <activity
-            android:name=".custom.CameraEntryActivity"
+            android:name=".custom.ui.CameraEntryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
@@ -53,6 +53,13 @@
         </activity>
 
         <activity
+            android:name=".custom.suite.TextStickerFragment"
+            android:screenOrientation="portrait">
+        </activity>
+
+
+
+        <activity
             android:name=".DemoEntryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
@@ -60,7 +67,7 @@
             android:windowSoftInputMode="stateHidden|adjustResize" >
 
         </activity>
-        
+
         <activity
             android:name=".TuComponentListActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
