--- a/TuSDKDemo/build.gradle
+++ b/TuSDKDemo/build.gradle
@@ -1,20 +1,23 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile project(':TuSDK')
+//    compile 'com.android.support:appcompat-v7:23.1.0'
+
 }
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
     defaultConfig {
 //        applicationId 'com.share.photoshare'
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 23
-        versionCode 255
-        versionName "6.3.172"
+        versionCode 1
+        versionName "1.0"
         multiDexEnabled true
+
     }
     sourceSets {
         main {
