--- a/TuSDK/build.gradle
+++ b/TuSDK/build.gradle
@@ -2,11 +2,22 @@ apply plugin: 'com.android.library'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
 }
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
+
+    defaultConfig {
+
+        minSdkVersion 14
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
+        multiDexEnabled true
+    }
 
     sourceSets {
         main {
