--- a/TuSDKDemo/AndroidManifest.xml
+++ b/TuSDKDemo/AndroidManifest.xml
@@ -32,10 +32,11 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        android:theme="@style/Theme.AppCompat" >
 
 
         <activity
+            android:theme="@style/Theme.AppCompat"
             android:name=".custom.ui.CameraEntryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
