--- a/TuSDKDemo/build.gradle
+++ b/TuSDKDemo/build.gradle
@@ -1,15 +1,9 @@
 apply plugin: 'com.android.application'
 
-dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
-    compile project(':TuSDK')
-//    compile 'com.android.support:appcompat-v7:23.1.0'
-
-}
-
 android {
+
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '23.0.3'
     defaultConfig {
 //        applicationId 'com.share.photoshare'
         minSdkVersion 14
@@ -17,8 +11,8 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
-
     }
+
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -42,4 +36,14 @@ android {
         debug.setRoot('build-types/debug')
         release.setRoot('build-types/release')
     }
+}
+
+
+dependencies {
+    compile fileTree(dir: 'libs', include: '*.jar')
+    compile project(':TuSDK')
+    compile project(':ColorPickerLibrary')
+
+    compile 'com.android.support:appcompat-v7:23.2.1'
+//    compile 'com.github.QuadFlask:colorpicker:0.0.10'
 }
