--- a/TuSDKDemo/assets/TuSDK.bundle/others/lsq_tusdk_configs.json
+++ b/TuSDKDemo/assets/TuSDK.bundle/others/lsq_tusdk_configs.json
@@ -106,7 +106,7 @@
     ],
     "stickerCategories": [
         { "id": 1, "name": "lsq_sticker_cate_default" },
-        { "id": 2, "name": "lsq_sticker_cate_mood" },
+//        { "id": 2, "name": "lsq_sticker_cate_mood" },
         { "id": 3, "name": "lsq_sticker_cate_watermark" }
     ],
     "stickerGroups": [
