--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -30,7 +30,7 @@
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!--<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!--<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />-->
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.SET_DEBUG_APP" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -54,7 +54,6 @@
         </meta-data>
 
         <activity
-            android:theme="@style/Theme.AppCompat.NoActionBar"
             android:name=".custom.ui.StartActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
@@ -68,7 +67,7 @@
         </activity>
 
         <activity
-            android:theme="@style/Theme.AppCompat"
+
             android:name=".custom.ui.CameraEntryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
