--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -46,7 +46,7 @@
         android:icon="@drawable/ic_icon"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
         <meta-data
             android:name="UMENG_APPKEY"
