--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -46,7 +46,7 @@
         android:icon="@drawable/ic_icon"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
 
         <meta-data
             android:name="UMENG_APPKEY"
@@ -67,7 +67,6 @@
         </activity>
 
         <activity
-
             android:name=".custom.ui.CameraEntryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
