--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: 'com.android.application'
 
+dependencies {
+    compile fileTree(dir: 'libs', include: '*.jar')
+    compile project(':TuSDK')
+//    compile 'com.android.support:appcompat-v7:23.1.2'
+    compile project(':ColorPickerLibrary')
+
+}
+
 android {
 
     compileSdkVersion 23
@@ -22,6 +30,7 @@ android {
             renderscript.srcDirs = ['src']
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
+            jniLibs.srcDirs = ['libs']
         }
 
         // Move the tests to tests/java, tests/res, etc...
@@ -38,10 +47,3 @@ android {
     }
 }
 
-
-dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
-    compile project(':TuSDK')
-    compile project(':ColorPickerLibrary')
-
-}
