--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile project(':TuSDK')
-//    compile 'com.android.support:appcompat-v7:23.1.2'
+//    compile 'com.android.support:appcompat-v7:23+'
     compile project(':ColorPickerLibrary')
 
 }
