--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -46,7 +46,9 @@
         android:icon="@drawable/ic_icon"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+    >
+        <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen"-->
 
         <activity
             android:theme="@style/AppTheme"
