--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,7 @@ apply plugin: 'com.android.application'
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile project(':TuSDK')
-//    compile 'com.android.support:appcompat-v7:23+'
-    compile project(':ColorPickerLibrary')
+    compile 'com.android.support:appcompat-v7:23.4.0'
 
 }
 
