--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -66,6 +66,7 @@
 
         <activity
             android:name=".custom.ui.CameraEntryActivity"
+            android:theme="@android:style/Theme.Translucent"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
