--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile project(':TuSDK')
     compile 'com.android.support:appcompat-v7:23.4.0'
-
+//    compile 'com.wingjay:blurimageviewlib:2.0.1'
 }
 
 android {
@@ -13,7 +13,7 @@ android {
     buildToolsVersion '23.0.1'
     defaultConfig {
         applicationId 'com.share.photoshare'
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
