--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile project(':TuSDK')
-    compile 'de.hdodenhof:circleimageview:2.1.0'
+//    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
 //    compile 'com.wingjay:blurimageviewlib:2.0.1'
 }
