startActivity Bug fix

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -64,6 +64,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".custom.ui.PhotoViewActivity"></activity>
         <activity
             android:name=".custom.ui.CameraEntryActivity"
             android:theme="@android:style/Theme.Translucent"
