--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     compile project(':TuSDK')
 //    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 //    compile 'com.wingjay:blurimageviewlib:2.0.1'
 }
 
