--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,18 +23,18 @@ android {
         debug {
             storeFile file('./keystore/debug.keystore')
         }
-//        releaseConfig {
-//            keyAlias 'txmk_sign.keystore'
-//            keyPassword 'Skincloser88'
-//            storeFile file('./keystore/txmk_sign.keystore')
-//            storePassword 'Skincloser88'
-//        }
         releaseConfig {
-            keyAlias 'android'
-            keyPassword 'xw123456'
-            storeFile file('./keystore/android.keystore')
-            storePassword 'xw123456'
+            keyAlias 'txmk_sign.keystore'
+            keyPassword 'Skincloser88'
+            storeFile file('./keystore/txmk_sign.keystore')
+            storePassword 'Skincloser88'
         }
+//        releaseConfig {
+//            keyAlias 'android'
+//            keyPassword 'xw123456'
+//            storeFile file('./keystore/android.keystore')
+//            storePassword 'xw123456'
+//        }
     }
     sourceSets {
         main {
